# mmck-records

./: .travis.yml  Makefile.am  README  README.md  configure.ac
doc/: mmck-records.texi
lib/: config.scm.in  mmck.records.helpers.scm  mmck.records.procedural.scm  mmck.records.scm  mmck.records.syntactic.scm  mmck.records.version.scm
meta/travis-ci/: install-chicken-egg-matchable.sh
tests/: test-records-procedural.scm  test-records-syntactic.scm  test-version.scm
